force-app/main/default/objects/CventEvents__AttendeeTemp__c/CventEvents__AttendeeTemp__c.object-meta.xml
<CustomObject>
    <description>Auxiliary object used for storing a fusion of contact and event participation information retrieved from Cvent.</description>
    <label>Attendee Temp Record</label>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Attendee Temp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Temp Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>