force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_AdmissionItem__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_AdmissionItem__c</fullName>
    <label>Admission Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>