force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_Attended__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Attended__c</fullName>
    <description>Represents whether the Attendee participated Event or not.</description>
    <label>Attended</label>
    <length>40</length>
    <type>Text</type>
</CustomField>