force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_AttendeeStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_AttendeeStatus__c</fullName>
    <label>Attendee Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>