force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_AttendingFormat__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_AttendingFormat__c</fullName>
    <label>Attendee Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>