force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_CCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CCEmailAddress__c</fullName>
    <label>CC Email Address</label>
    <type>Email</type>
</CustomField>