force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_CCPARequestDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CCPARequestDate__c</fullName>
    <label>(CCPA) &quot;Do Not Sell&quot; Request Date</label>
    <type>DateTime</type>
</CustomField>