force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_CCPAStatus__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_CCPAStatus__c</fullName>
    <label>(CCPA) &quot;Do Not Sell&quot; Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>