force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_ContactStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ContactStub__c</fullName>
    <externalId>true</externalId>
    <label>Contact Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>