force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_EventCheckInDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_EventCheckInDate__c</fullName>
    <label>Event Check-In Date</label>
    <type>Date</type>
</CustomField>