force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_EventQuestionAnswers__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_EventQuestionAnswers__c</fullName>
    <description>Stores the serialized map of question tag stub to the concatenated string of responses.</description>
    <label>Event Question Answers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>