force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_ExternalObjectId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ExternalObjectId__c</fullName>
    <description>Stores SF record Id Cvent contact has been originated from.</description>
    <externalId>true</externalId>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>