force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_FailedEventQuestionAnswers__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_FailedEventQuestionAnswers__c</fullName>
    <description>Stores a list of errors that occurred during question answers type conversion.</description>
    <label>Failed Event Question Answers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>