force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_GroupConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_GroupConfirmationNumber__c</fullName>
    <label>Group Confirmation Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>