force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomeAddress2__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeAddress2__c</fullName>
    <label>Home Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>