force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomeAddress3__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeAddress3__c</fullName>
    <label>Home Address 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>