force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomeCountryCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeCountryCode__c</fullName>
    <label>Home Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>