force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomeCountryName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeCountryName__c</fullName>
    <label>Home Country Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>