force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomeFax__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomeFax__c</fullName>
    <label>Home Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>