force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_HomePostalCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_HomePostalCode__c</fullName>
    <label>Home Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>