force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_InternalNote__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_InternalNote__c</fullName>
    <label>Internal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>