force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_MembershipExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_MembershipExpirationDate__c</fullName>
    <label>Membership Expiration Date</label>
    <type>Date</type>
</CustomField>