force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_MembershipItem__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_MembershipItem__c</fullName>
    <label>Membership Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>