force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_Message__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_Message__c</fullName>
    <description>Stores the information/error message of the record matching flow.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>