force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_PrimaryAddress1__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryAddress1__c</fullName>
    <label>Primary Address 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>