force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_PrimaryCountryCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryCountryCode__c</fullName>
    <label>Primary Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>