force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_PrimaryCountryName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryCountryName__c</fullName>
    <label>Primary Country Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>