force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_PrimaryRegistrantStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryRegistrantStub__c</fullName>
    <externalId>true</externalId>
    <label>Primary Registrant Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>