force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_PrimaryStateCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_PrimaryStateCode__c</fullName>
    <label>Primary State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>