force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_ReferenceId__c</fullName>
    <label>Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>