force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RegistrationDate__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>