force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_RegistrationPathId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RegistrationPathId__c</fullName>
    <label>Registration Path Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>