force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_RegistrationType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RegistrationType__c</fullName>
    <label>Registration Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>