force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_RespondedThrough__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_RespondedThrough__c</fullName>
    <label>Responded Through</label>
    <length>200</length>
    <type>Text</type>
</CustomField>