force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_SourceId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_SourceId__c</fullName>
    <label>Source Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>