force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_WorkCity__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_WorkCity__c</fullName>
    <label>Work City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>