force-app/main/default/objects/CventEvents__AttendeeTemp__c/fields/CventEvents__pkg_WorkStateName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__pkg_WorkStateName__c</fullName>
    <label>Work State Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>